fix bug so Tests work