@@ -10,11 +10,18 @@ import java.util.Set;
 import automaton.State;
 import test.TestResult;
 import utils.Pair;
+import vspa.ProceduralAutomaton;
+import vspa.VRA_State;
+import vspa.VSPAAlphabet;
 import vspa.VisiblySystemProceduralAutomata;
 
-public class JSONVSPA extends VisiblySystemProceduralAutomata{
+public class JSONVSPA extends VisiblySystemProceduralAutomata {
     private JSONProceduralAutomaton startingAutomaton;
-    private Set<JSONProceduralAutomaton> proceduralAutomata = new HashSet<>();
+    private final Set<JSONProceduralAutomaton> proceduralAutomata = new HashSet<>();
+
+    public JSONVSPA(VSPAAlphabet alphabet) {
+        super(alphabet);
+    }
 
     public void setStartingAutomaton(JSONProceduralAutomaton startingAutomaton) {
         this.startingAutomaton = startingAutomaton;
@@ -22,12 +29,12 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
 
     public void addProceduralAutomaton(JSONProceduralAutomaton nfa, String callSymbol) {
         proceduralAutomata.add(nfa);
-        linkingFunction.put(nfa.getProceduralSymbol(), callSymbol);
+        alphabet.addProceduralSymbol(nfa.getProceduralSymbol(), callSymbol);
     }
 
     public void createKeyGraphs(Set<String> keySymbols) {
         for (JSONProceduralAutomaton pa : proceduralAutomata) {
-            if (linkingFunction.get(pa.getProceduralSymbol()).equals("{")) {
+            if (alphabet.getCallFromProcedural(pa.getProceduralSymbol()).equals("{")) {
                 pa.createKeyGraph(keySymbols);
             }
         }
@@ -54,16 +61,16 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
             memoryStart = maxMemory = 0;
         }
 
-        if (!linkingFunction.get(startingAutomaton.getProceduralSymbol()).equals(word.get(0))) {
-            return new Pair<Boolean,Long>(false, maxMemory-memoryStart);
+        if (!alphabet.getCallFromProcedural(startingAutomaton.getProceduralSymbol()).equals(word.getFirst())) {
+            return new Pair<>(false, Math.max(TestResult.getMemoryUse(), maxMemory) - memoryStart);
         }
 
-        Set<Map.Entry<State, String>> currentStates = new HashSet<>();
+        Set<Map.Entry<VRA_State, String>> currentStates = new HashSet<>();
         List<StackElement> stack = new ArrayList<>();
         Set<Reach> R = new HashSet<>();
         Set<String> K = new HashSet<>();
         String k = "";
-        Set<Vertex> Good = new HashSet<>();
+        Set<Vertex<VRA_State>> Good = new HashSet<>();
 
         if (word.size() > 2) {
             if (measureMemory) {
@@ -71,10 +78,10 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
             }
 
             String nextSymbol = String.valueOf(word.get(1));
-            for (Vertex vertex : startingAutomaton.getKeyGraph().getVerticesByKey(nextSymbol)) {
-                currentStates.add(new AbstractMap.SimpleEntry<>(vertex.startState, startingAutomaton.getProceduralSymbol()));
+            for (VRA_State s : startingAutomaton.getKeyGraph().getLocationsReadingKey(nextSymbol)) {
+                currentStates.add(new AbstractMap.SimpleEntry<>(s, startingAutomaton.getProceduralSymbol()));
             }
-            for (Map.Entry<State, String> state : currentStates) {
+            for (Map.Entry<VRA_State, String> state : currentStates) {
                 R.add(new Reach(state.getKey(), state.getKey()));
             }
             K.add(nextSymbol);
@@ -94,22 +101,21 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
             String symbol = word.get(i);
             if (debug) debug(symbol, currentStates, stack, R, K, k, Good);
 
-            Set<Map.Entry<State, String>> nextStates = new HashSet<>();
+            Set<Map.Entry<VRA_State, String>> nextStates = new HashSet<>();
             Set<Reach> nextR = new HashSet<>();
 
             if (symbol.equals("[")) {
                 stack.add(new StackElement(currentStates, R, K, k, Good));
-                for (Map.Entry<State, String> pair : currentStates) {
-                    State state = pair.getKey();
+                for (Map.Entry<VRA_State, String> pair : currentStates) {
+                    VRA_State state = pair.getKey();
                     for (JSONProceduralAutomaton pa : proceduralAutomata) {
                         String procSymbol = pa.getProceduralSymbol();
-                        if (linkingFunction.get(procSymbol).equals(symbol) &&
+                        if (alphabet.getCallFromProcedural(procSymbol).equals(symbol) &&
                                 !state.getTransitions(procSymbol).isEmpty()) {
                                     nextStates.add(new AbstractMap.SimpleEntry<>(pa.getInitalState(), procSymbol));
                         }
                     }
                 }
-                R = new HashSet<>();
             }
             
             else if (symbol.equals("{")) {
@@ -119,11 +125,11 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
                 Good = new HashSet<>();
 
                 if (nextSymbol.equals("}")) {
-                    for (Map.Entry<State, String> pair : currentStates) {
-                        State state = pair.getKey();
+                    for (Map.Entry<VRA_State, String> pair : currentStates) {
+                        VRA_State state = pair.getKey();
                         for (JSONProceduralAutomaton pa : proceduralAutomata) {
                             String procSymbol = pa.getProceduralSymbol();
-                            if (linkingFunction.get(pa.getProceduralSymbol()).equals(symbol) &&
+                            if (alphabet.getCallFromProcedural(pa.getProceduralSymbol()).equals(symbol) &&
                                         !state.getTransitions(procSymbol).isEmpty()) {
                                 nextStates.add(new AbstractMap.SimpleEntry<>(pa.getInitalState(), procSymbol));
                             }
@@ -131,20 +137,20 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
                     }
                 }
                 else {
-                    for (Map.Entry<State, String> pair : currentStates) {
-                        State state = pair.getKey();
+                    for (Map.Entry<VRA_State, String> pair : currentStates) {
+                        VRA_State state = pair.getKey();
                         for (JSONProceduralAutomaton pa : proceduralAutomata) {
                             String procSymbol = pa.getProceduralSymbol();
-                            if (linkingFunction.get(pa.getProceduralSymbol()).equals(symbol) &&
+                            if (alphabet.getCallFromProcedural(pa.getProceduralSymbol()).equals(symbol) &&
                                     !state.getTransitions(procSymbol).isEmpty()) {
-                                for (Vertex vertex : pa.getKeyGraph().getVerticesByKey(nextSymbol)) {
+                                for (Vertex<VRA_State> vertex : pa.getKeyGraph().getVerticesByKey(nextSymbol)) {
                                     nextStates.add(new AbstractMap.SimpleEntry<>(vertex.startState, procSymbol));
                                 }
                             }
                         }
                     }
                     
-                    for (Map.Entry<State, String> state : nextStates) {
+                    for (Map.Entry<VRA_State, String> state : nextStates) {
                         nextR.add(new Reach(state.getKey(), state.getKey()));
                     }
                     K.add(nextSymbol);
@@ -154,35 +160,35 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
 
             else if ((alphabet.getInternalSymbols().contains(symbol) && !symbol.equals("#")) || 
                     (symbol.equals("#") && R.isEmpty())) {
-                for (Map.Entry<State, String> pair : currentStates) {
-                    State state = pair.getKey();
-                    for (State q : state.getTransitions(symbol))
+                for (Map.Entry<VRA_State, String> pair : currentStates) {
+                    VRA_State state = pair.getKey();
+                    for (VRA_State q : state.getTransitions(symbol))
                         nextStates.add(new AbstractMap.SimpleEntry<>(q, pair.getValue()));
                 }
                 for (Reach reach : R) {
-                    State state = reach.second;
-                    for (State q : state.getTransitions(symbol))
+                    VRA_State state = reach.second;
+                    for (VRA_State q : state.getTransitions(symbol))
                         nextR.add(new Reach(reach.first, q));
                 }
             }
 
             else if (symbol.equals("#")) {
                 for (Reach reach : R) {
-                    Good.add(new Vertex(reach.first, reach.second, k));
+                    Good.add(new Vertex<>(reach.first, reach.second, k));
                 }
                 String nextSymbol = word.get(i + 1);
 
-                for (Map.Entry<State, String> pair : currentStates) {
+                for (Map.Entry<VRA_State, String> pair : currentStates) {
                     String procSymbol = pair.getValue();
                     for (JSONProceduralAutomaton pa : proceduralAutomata) {
                         if (procSymbol.equals(pa.getProceduralSymbol())) {
-                            for (Vertex vertex : pa.getKeyGraph().getVerticesByKey(nextSymbol)) {
+                            for (Vertex<VRA_State> vertex : pa.getKeyGraph().getVerticesByKey(nextSymbol)) {
                                 nextStates.add(new AbstractMap.SimpleEntry<>(vertex.startState, procSymbol));
                             }
                         }
                     }
                 }
-                for (Map.Entry<State, String> state : nextStates) {
+                for (Map.Entry<VRA_State, String> state : nextStates) {
                     nextR.add(new Reach(state.getKey(), state.getKey()));
                 }
                 K.add(nextSymbol);
@@ -191,18 +197,18 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
 
             else if (symbol.equals("]") || (symbol.equals("}") && R.isEmpty())) {
                 if (stack.isEmpty()) return new Pair<Boolean,Long>(false, maxMemory-memoryStart);
-                StackElement stackElement = stack.remove(stack.size() - 1);
-                Set<Map.Entry<State, String>> possibleNextState = stackElement.states;
+                StackElement stackElement = stack.removeLast();
+                Set<Map.Entry<VRA_State, String>> possibleNextState = stackElement.states;
                 R = stackElement.R;
                 K = stackElement.K;
                 k = stackElement.k;
                 Good = stackElement.Good;
 
-                for (Map.Entry<State, String> pair : currentStates) {
-                    State state = pair.getKey();
-                    if (state.isFinal() && alphabet.getReturnFromCallSymbol(linkingFunction.get(pair.getValue())).equals(symbol)) { 
-                        for (Map.Entry<State, String> pair2 : possibleNextState) {
-                            for (State q : pair2.getKey().getTransitions(pair.getValue())) {
+                for (Map.Entry<VRA_State, String> pair : currentStates) {
+                    VRA_State state = pair.getKey();
+                    if (state.isFinal() && alphabet.getReturnFromCallSymbol(alphabet.getCallFromProcedural(pair.getValue())).equals(symbol)) {
+                        for (Map.Entry<VRA_State, String> pair2 : possibleNextState) {
+                            for (VRA_State q : pair2.getKey().getTransitions(pair.getValue())) {
                                 nextStates.add(new AbstractMap.SimpleEntry<>(q, pair2.getValue()));
 
                                 for (Reach reach : R) {
@@ -217,29 +223,29 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
             }
 
             else if (symbol.equals("}")) {
-                if (stack.isEmpty()) return new Pair<Boolean,Long>(false, maxMemory-memoryStart);
+                if (stack.isEmpty()) return new Pair<>(false, maxMemory-memoryStart);
                 
                 for (Reach reach : R) {
-                    Good.add(new Vertex(reach.first, reach.second, k));
+                    Good.add(new Vertex<>(reach.first, reach.second, k));
                 }
-                StackElement stackElement = stack.remove(stack.size() - 1);
-                Set<Map.Entry<State, String>> possibleNextState = stackElement.states;
+                StackElement stackElement = stack.removeLast();
+                Set<Map.Entry<VRA_State, String>> possibleNextState = stackElement.states;
                 R = stackElement.R;
                 k = stackElement.k;
 
                 // Recuperation of active procedural automata 
                 Set<String> procSymbols = new HashSet<>();
-                for (Map.Entry<State, String> pair : currentStates) {
+                for (Map.Entry<VRA_State, String> pair : currentStates) {
                     procSymbols.add(pair.getValue());
                 }
                 
                 for (JSONProceduralAutomaton pa : proceduralAutomata) {
                     if (procSymbols.contains(pa.getProceduralSymbol())) {
                         if (pa.getKeyGraph() != null && pa.getKeyGraph().Valid(K, Good)) {
-                            for (Map.Entry<State, String> pair : currentStates) {
+                            for (Map.Entry<VRA_State, String> pair : currentStates) {
                                 if (pair.getValue().equals(pa.getProceduralSymbol())) {
-                                    for (Map.Entry<State, String> pair2 : possibleNextState) {
-                                        for (State q : pair2.getKey().getTransitions(pair.getValue())) {
+                                    for (Map.Entry<VRA_State, String> pair2 : possibleNextState) {
+                                        for (VRA_State q : pair2.getKey().getTransitions(pair.getValue())) {
                                             nextStates.add(new AbstractMap.SimpleEntry<>(q, pair2.getValue()));
 
                                             for (Reach reach : R) {
@@ -259,7 +265,7 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
             }
 
             if (nextStates.isEmpty()) {
-                return new Pair<Boolean,Long>(false, maxMemory-memoryStart);
+                return new Pair<>(false, maxMemory-memoryStart);
             }
             currentStates = nextStates;
             R = nextR;
@@ -274,12 +280,12 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
         }
 
         for (Reach reach : R) {
-            Good.add(new Vertex(reach.first, reach.second, k));
+            Good.add(new Vertex<>(reach.first, reach.second, k));
         }
 
-        if (debug) debug(word.get(word.size() - 1), currentStates, stack, R, K, k, Good);
+        if (debug) debug(word.getLast(), currentStates, stack, R, K, k, Good);
 
-        if (alphabet.getReturnFromCallSymbol(linkingFunction.get(startingAutomaton.getProceduralSymbol())).equals(word.get(word.size() - 1)) && 
+        if (alphabet.getReturnFromCallSymbol(alphabet.getCallFromProcedural(startingAutomaton.getProceduralSymbol())).equals(word.get(word.size() - 1)) &&
                 stack.isEmpty() && 
                 this.startingAutomaton.getKeyGraph().Valid(K, Good)) {
                     
@@ -295,15 +301,15 @@ public class JSONVSPA extends VisiblySystemProceduralAutomata{
         return new Pair<Boolean,Long>(false, maxMemory-memoryStart);
     }
 
-    private void debug(String symbol, Set<Map.Entry<State, String>> currentStates, 
-            List<StackElement> stack, Set<Reach> R, Set<String> K, String k, Set<Vertex> Good) {
+    private void debug(String symbol, Set<Map.Entry<VRA_State, String>> currentStates,
+            List<StackElement> stack, Set<Reach> R, Set<String> K, String k, Set<Vertex<VRA_State>> Good) {
         System.out.println("Symbol : " + symbol);
         System.out.print("States : ");
-        for (Map.Entry<State, String> pair : currentStates) {
+        for (Map.Entry<VRA_State, String> pair : currentStates) {
             System.out.print(pair.getKey().getName() + " ");
         }
-        if (stack.size() > 0)
-            System.out.println("\nTop Stack : " + stack.get(stack.size() - 1).toString());
+        if (!stack.isEmpty())
+            System.out.println("\nTop Stack : " + stack.getLast().toString());
         else
             System.out.println("\nStack : empty");
         System.out.println("R: " + R.toString());
